# trend-engine

./: .gitignore  .railwayignore  .replit  AGENTS.md  Dockerfile  nixpacks.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway.toml  replit.md
.github/workflows/: production-health.yml
apps/web/: .env.example  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
apps/web/app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/components/: achievement-badges.tsx  affiliate-checkout-fields.tsx  app-quick-nav.tsx  creator-account-manager.tsx  email-waitlist-form.tsx  floating-ai-assistant.tsx  idea-panel.tsx  pwa-registration.tsx  resume-checkout-form.tsx  saved-idea-content.tsx  trend-dashboard.tsx
apps/web/lib/: admin.ts  affiliate-attribution.ts  (+21 more)
artifacts/: pnpm-install-exit.txt
artifacts/content-engine/: index.html  package.json  vite.config.ts
artifacts/fastapi-server/: .env  requirements.txt  trends.db
artifacts/mockup-sandbox/: vite.config.ts
attached_assets/: Pasted-PHASE-2-Fix-Run-the-App-Step-3-Install-dependencies-In-_1775260410061.txt
docs/: launch-readiness-plan.md  monitoring-setup.md  prelaunch-smoke-checklist.md  social-scraping-setup.md  support-playbook.md  trend-engine-project-memory.md
docs/marketing/: affiliate-launch-plan.md  google-ads-keywords.csv  paid-ad-copy-bank.md  paid-ads-launch-plan.md  seo-backlink-plan.md  seo-traffic-next-steps.md
scripts/: check-production-health.mjs  ensure-pnpm.mjs
(+123 files in other folders)
