[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "praw>=7.8.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.43.0",
]
